fix(core): resolve constitution violations — logging, @ExtendWith, StringUtils
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>